--- a/juniortech/src/app/components/contactform/contactform.component.html
+++ b/juniortech/src/app/components/contactform/contactform.component.html
@@ -1,5 +1,5 @@
 <!-- Contact Form -->
-<div class="contact-container">
+<div class="contact-container" data-aos="zoom-in-up">
   <!-- Mensaje de éxito -->
   <div *ngIf="showSuccess" class="alert alert-success alert-dismissible fade show" role="alert">
     <i class="bi bi-check-circle-fill"></i> {{ successMessage }}
