--- a/juniortech/src/app/components/home/home.component.html
+++ b/juniortech/src/app/components/home/home.component.html
@@ -1,6 +1,14 @@
+<section id="home">
 <app-header></app-header>
+</section>
+<section >
 <app-about></app-about>
+</section>
 <app-presentation></app-presentation>
+<section id="skills">
 <app-skills></app-skills>
+</section>
+<section id="projects">
 <app-projects></app-projects>
+</section>
 <app-footer></app-footer>
