--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -1,8 +1,8 @@
-<section class="projects-section" id="Projects">
+<section class="projects-section" id="Projects" data-aos="zoom-in-up">
   <h2>Proyectos</h2>
   <div class="projects-grid">
     <!-- Card 1 -->
-    <div class="card">
+    <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
         <img src="../../../assets/images/proyectos/project-1.png" alt="Descripción del proyecto" />
         <span class="card__span">#Dekstop</span>
@@ -14,7 +14,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
         <img src="../../../assets/images/proyectos/project-2.png" alt="Descripción del proyecto" />
         <span class="card__span">#Desktop</span>
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
         <img src="../../../assets/images/proyectos/project-3.png" alt="Descripción del proyecto" />
         <span class="card__span">#Web</span>        
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
         <img src="../../../assets/images/proyectos/project-3.png" alt="Descripción del proyecto" />
         <span class="card__span">Category</span>
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
         <img src="../../../assets/images/proyectos/project-3.png" alt="Descripción del proyecto" />
         <span class="card__span">Category</span>
