--- a/juniortech/src/app/components/skills/skills.component.html
+++ b/juniortech/src/app/components/skills/skills.component.html
@@ -1,5 +1,5 @@
 <div class="skills-container">
-  <div class="skill-category">
+  <div class="skill-category" data-aos="zoom-in-up">
     <h2 class="skill-title">Habilidades del equipo</h2>
     <h2>Frontend</h2>
     <div class="skill-list">
@@ -21,7 +21,7 @@
       </div>     
     </div>
   </div>  
-  <div class="skill-category">
+  <div class="skill-category" data-aos="zoom-in-up">
     <h2>Backend</h2>
     <div class="skill-list">
       <div class="skill-card">
@@ -39,7 +39,7 @@
           
     </div>
   </div>
-  <div class="skill-category">
+  <div class="skill-category" data-aos="zoom-in-up">
     <h2>DB</h2>
     <div class="skill-list">
       <div class="skill-card">
