--- a/juniortech/src/app/app.component.css
+++ b/juniortech/src/app/app.component.css
@@ -1,40 +1,74 @@
-/*Estilos del boton de audio*/
+/* Estilos del botón de audio */
 #audio-button {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    background-color: #1eca3ba8;
-    color: #fff;
-    border: none;
-    border-radius: 50px;
-    padding: 2px 10px;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  #audio-button i {
-    margin-right: 10px;
-    font-size: 25px;
-    margin-left: 10px;
-    margin-top:4px;
-  }
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background-color: #1eca3ba8;
+  color: #fff;
+  border: none;
+  border-radius: 50px;
+  padding: 8px 14px;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out; /* Suaviza el clic */
+}
 
-  /* Media query para pantallas pequeñas */
+#audio-button:active {
+  transform: scale(0.9); /* Efecto de pulsación */
+}
+
+#audio-button i {
+  font-size: 25px;
+  margin: 0 10px;
+  transition: color 0.3s ease, transform 0.3s ease; /* Suaviza el cambio de icono */
+}
+
+#audio-button:hover i {
+  color: #95f003;
+  transform:scale(1.2) /*aumenta ligeramente el icono al pasar el ratón */
+}
+
+/* Estilos del tooltip */
+.tooltip {
+  position: absolute;
+  bottom: 60px; /* Ajusta la distancia desde el botón */
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  white-space: nowrap;
+  display: none;
+  font-size: 14px;
+}
+
+#audio-button:hover .tooltip {
+  display: block; /* Mostrar el tooltip al pasar el ratón */
+}
+
+
+/* Media query para pantallas pequeñas */
 @media (max-width: 768px) {
   #audio-button {
     bottom: 20px;
     left: 10px;
-
-    padding: 2px 4px;
+    padding: 6px 8px;
   }
 
   #audio-button i {
-    font-size: 15px;
-    margin-bottom: 2px;
+    font-size: 20px;
+  }
+
+  .tooltip {
+    bottom: 50px; /* Ajusta la distancia para pantallas pequeñas */
+    padding: 8px;
+    font-size: 12px;
   }
 }
 
