--- a/juniortech/src/app/components/about/about.component.css
+++ b/juniortech/src/app/components/about/about.component.css
@@ -6,6 +6,7 @@
   font-family: 'Poppins', sans-serif;
 }
 
+
 .conocenos-section {
   display: flex;
   flex-direction: column;
@@ -18,6 +19,7 @@
   color:#e6e203;
   text-align: center;
   margin-bottom: 30px;
+  font-family: var(--font-primary);
 }
 
 .card-container {
