--- a/juniortech/src/app/components/header/header.component.html
+++ b/juniortech/src/app/components/header/header.component.html
@@ -20,16 +20,16 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#Inicio">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="#home">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#Conocenos">Acerca de nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Habilidades">Habilidades</a>
+                            <a class="nav-link" href="#skills">Habilidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Projects">Proyectos</a>
+                            <a class="nav-link" href="#projects">Proyectos</a>
                         </li>                      
                        
                     </ul>
