--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -4,63 +4,138 @@
     <!-- Card 1 -->
     <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
-        <img src="../../../assets/images/proyectos/project-1.png" alt="Descripción del proyecto" />
+        <img src="../../../assets/images/proyectos/project (2).webp" alt="Descripción del proyecto" />
         <span class="card__span">#Dekstop</span>
       </div>
       <div class="card-int">
         <p class="card-int__title">Trooper Stay Java</p>
         <p class="excerpt">Aplicación de escritorio construida en Java y JOptionPane</p>
-        <button class="card-int__button">Show</button>
+        <button class="card-int__button" 
+        (click)="openModal(
+          'Trooper Stay Java', 
+          'Aplicación de escritorio construida en Java y JOptionPane', 
+          '#Java #Desktop', 
+          'https://github.com/enlace', 
+          'https://web.com/enlace', 
+          'https://youtube.com/enlace',
+          '../../../assets/images/proyectos/project (2).webp'
+        )">
+  Show
+</button>
       </div>
     </div>
 
     <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
-        <img src="../../../assets/images/proyectos/project-2.png" alt="Descripción del proyecto" />
+        <img src="../../../assets/images/proyectos/project (3).webp" alt="Descripción del proyecto" />
         <span class="card__span">#Desktop</span>
       </div>
       <div class="card-int">
         <p class="card-int__title">Trooper Stay Python</p>
         <p class="excerpt">Mejora del proyecto anterior construido en Python y TKinter</p>
-        <button class="card-int__button">Show</button>
+        <button class="card-int__button" 
+        (click)="openModal(
+          'Trooper Stay Java', 
+          'Aplicación de escritorio construida en Java y JOptionPane', 
+          '#Java #Desktop', 
+          'https://github.com/enlace', 
+          'https://web.com/enlace', 
+          'https://youtube.com/enlace',
+          '../../../assets/images/proyectos/project (2).webp'
+        )">
+  Show
+</button>
       </div>
     </div>
 
     <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
-        <img src="../../../assets/images/proyectos/project-3.png" alt="Descripción del proyecto" />
+        <img src="../../../assets/images/proyectos/project (4).webp" alt="Descripción del proyecto" />
         <span class="card__span">#Web</span>        
       </div>
       <div class="card-int">
         <p class="card-int__title">Trooper Stay E-commerce</p>
         <p class="excerpt">Aplicación Web SPA full stack</p>
-        <button class="card-int__button">Show</button>
+        <button class="card-int__button" 
+        (click)="openModal(
+          'Trooper Stay Java', 
+          'Aplicación de escritorio construida en Java y JOptionPane', 
+          '#Java #Desktop', 
+          'https://github.com/enlace', 
+          'https://web.com/enlace', 
+          'https://youtube.com/enlace',
+          '../../../assets/images/proyectos/project (2).webp'
+        )">
+  Show
+</button>
       </div>
     </div>
 
     <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
-        <img src="../../../assets/images/proyectos/project-3.png" alt="Descripción del proyecto" />
-        <span class="card__span">Category</span>
+        <img src="../../../assets/images/proyectos/project (5).webp" alt="Descripción del proyecto" />
+        <span class="card__span">#Web</span>
       </div>
       <div class="card-int">
-        <p class="card-int__title">Project Title</p>
-        <p class="excerpt">Brief description of the project.</p>
-        <button class="card-int__button">Show</button>
+        <p class="card-int__title">Avatar | juego</p>
+        <p class="excerpt">Juego de avatar donde el usuario elige un personaje</p>
+        <button class="card-int__button" 
+        (click)="openModal(
+          'Trooper Stay Java', 
+          'Aplicación de escritorio construida en Java y JOptionPane', 
+          '#Java #Desktop', 
+          'https://github.com/enlace', 
+          'https://web.com/enlace', 
+          'https://youtube.com/enlace',
+          '../../../assets/images/proyectos/project (2).webp'
+        )">
+  Show
+</button>
       </div>
     </div>
 
     <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
-        <img src="../../../assets/images/proyectos/project-3.png" alt="Descripción del proyecto" />
-        <span class="card__span">Category</span>
+        <img src="../../../assets/images/proyectos/project (1).webp" alt="Descripción del proyecto" />
+        <span class="card__span">#Web</span>
       </div>
       <div class="card-int">
-        <p class="card-int__title">Project Title</p>
-        <p class="excerpt">Brief description of the project.</p>
-        <button class="card-int__button">Show</button>
+        <p class="card-int__title">Tienda de café</p>
+        <p class="excerpt">E-commerce básico donde el usuario puede sumar productos al carrito y realizar la compra
+          mediante mercado pago.
+        </p>
+        <button class="card-int__button" 
+        (click)="openModal(
+          'Trooper Stay Java', 
+          'Aplicación de escritorio construida en Java y JOptionPane', 
+          '#Java #Desktop', 
+          'https://github.com/enlace', 
+          'https://web.com/enlace', 
+          'https://youtube.com/enlace',
+          '../../../assets/images/proyectos/project (2).webp'
+        )">
+  Show
+</button>
       </div>
     </div>
     
   </div>
+  <!-- Modal -->
+  <div *ngIf="isModalOpen" class="modal-overlay show" (click)="closeModal()">
+    <div class="modal-content" (click)="$event.stopPropagation()">
+      <img [src]="modalData.imgUrl" alt="Imagen del proyecto" class="modal-project-image">
+      <h3>{{ modalData.title }}</h3>
+      <p>{{ modalData.description }}</p>
+      <div class="technologies">
+        <span *ngFor="let tag of modalData.tags">{{ tag }}</span>
+      </div>
+      <div class="modal-icons">
+        <a [href]="modalData.githubUrl" target="_blank"><i class="bi bi-github"></i></a>
+        <a [href]="modalData.webUrl" target="_blank"><i class="bi bi-globe"></i></a>
+        <a [href]="modalData.youtubeUrl" target="_blank"><i class="bi bi-youtube"></i></a>
+      </div>
+      <button class="close-button" (click)="closeModal()">Close</button>
+    </div>
+  </div>
+  
 </section>
