--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -5,7 +5,7 @@
     <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
         <img src="../../../assets/images/proyectos/project (2).webp" alt="Descripción del proyecto" />
-        <span class="card__span">#Dekstop</span>
+        <span class="card__span">#Desktop</span>
       </div>
       <div class="card-int">
         <p class="card-int__title">Trooper Stay Java</p>
@@ -14,10 +14,10 @@
         (click)="openModal(
           'Trooper Stay Java', 
           'Aplicación de escritorio construida en Java y JOptionPane', 
-          '#Java #Desktop', 
-          'https://github.com/enlace', 
-          'https://web.com/enlace', 
-          'https://youtube.com/enlace',
+          '#Java #Desktop #JOptionPane #JDBC #MySQL', 
+          'https://github.com/CodeStrong2023/ProyectoJuniorTechTroopers', 
+          'https://trooper-stay.web.app/', 
+          'https://www.youtube.com/watch?v=-J3x-1ghTbQ&t=194s',
           '../../../assets/images/proyectos/project (2).webp'
         )">
   Show
@@ -35,13 +35,13 @@
         <p class="excerpt">Mejora del proyecto anterior construido en Python y TKinter</p>
         <button class="card-int__button" 
         (click)="openModal(
-          'Trooper Stay Java', 
-          'Aplicación de escritorio construida en Java y JOptionPane', 
-          '#Java #Desktop', 
-          'https://github.com/enlace', 
-          'https://web.com/enlace', 
-          'https://youtube.com/enlace',
-          '../../../assets/images/proyectos/project (2).webp'
+          'Trooper Stay Python', 
+          'Aplicación Python que permite a los usuarios publicar y buscar alojamientos para estancias temporales. Los usuarios pueden registrarse, iniciar sesión y tener roles duales: publicar alojamientos o contratar servicios de alojamiento. La aplicación utiliza diferentes bases de datos MySQL para almacenar la información de los alojamientos y los usuarios.', 
+          '#Python #Tkinter #MySQL', 
+          'https://github.com/CodeStrong2023/ProyectoPythonJuniorTechTroopers', 
+          'https://trooper-stay.web.app/', 
+          'https://www.youtube.com/watch?v=TMBL6uw-nCQ',
+          '../../../assets/images/proyectos/project (3).webp'
         )">
   Show
 </button>
@@ -58,13 +58,13 @@
         <p class="excerpt">Aplicación Web SPA full stack</p>
         <button class="card-int__button" 
         (click)="openModal(
-          'Trooper Stay Java', 
-          'Aplicación de escritorio construida en Java y JOptionPane', 
-          '#Java #Desktop', 
-          'https://github.com/enlace', 
-          'https://web.com/enlace', 
-          'https://youtube.com/enlace',
-          '../../../assets/images/proyectos/project (2).webp'
+          'Trooper Stay E-commerce', 
+          'Aplicación Web SPA full stack. TrooperStay es una plataforma de reservas de alojamiento que permite a los usuarios encontrar y alquilar departamentos, habitaciones de hotel y cabañas de manera sencilla.', 
+          '#Angular #HTML #CSS #BOOTSTRAP #Firebase #AOS #TypeScript #JavaScript #Java #Springboot #PostgreSQL #Web', 
+          'https://github.com/CodeStrong2023/JuniorTechTroopersE-commerse-Front', 
+          'https://trooper-stay.web.app/', 
+          'https://www.youtube.com/watch?v=490voq0Dho8',
+          '../../../assets/images/proyectos/project (4).webp'
         )">
   Show
 </button>
@@ -81,13 +81,13 @@
         <p class="excerpt">Juego de avatar donde el usuario elige un personaje</p>
         <button class="card-int__button" 
         (click)="openModal(
-          'Trooper Stay Java', 
-          'Aplicación de escritorio construida en Java y JOptionPane', 
-          '#Java #Desktop', 
+          'Avatar el juego', 
+          'Juego interactivo en el que el usuario elige entre varios personajes y se enfrenta a otros jugadores o a la computadora. Cada personaje tiene diferentes tipos de ataques, habilidades y niveles de vida. Los jugadores deben seleccionar sus estrategias de ataque y defensa para reducir la barra de vida del oponente hasta dejarlo sin puntos de vida, ganando así la partida. Este juego combina elementos de estrategia y acción, proporcionando una experiencia entretenida y desafiante.', 
+          '#HTML #CSS #JavaScript #Web', 
           'https://github.com/enlace', 
-          'https://web.com/enlace', 
-          'https://youtube.com/enlace',
-          '../../../assets/images/proyectos/project (2).webp'
+          'https://www.youtube.com/@JuniorTechTroopers', 
+          'https://www.youtube.com/@JuniorTechTroopers',
+          '../../../assets/images/proyectos/project (5).webp'
         )">
   Show
 </button>
@@ -106,13 +106,13 @@
         </p>
         <button class="card-int__button" 
         (click)="openModal(
-          'Trooper Stay Java', 
-          'Aplicación de escritorio construida en Java y JOptionPane', 
-          '#Java #Desktop', 
-          'https://github.com/enlace', 
-          'https://web.com/enlace', 
-          'https://youtube.com/enlace',
-          '../../../assets/images/proyectos/project (2).webp'
+          'Tienda de café E-commerce básico', 
+          'Plataforma de comercio electrónico dedicada a la venta de cafés especiales, donde los usuarios pueden explorar una variedad de productos, agregar sus favoritos al carrito y realizar compras mediante la integración de Mercado Pago. La tienda incluye descripciones detalladas de cada tipo de café, opciones para personalizar pedidos y una interfaz intuitiva que permite a los usuarios completar sus compras de manera rápida y segura. Este proyecto está enfocado en mejorar la experiencia de compra y el acceso a productos de alta calidad para los amantes del café.', 
+          '#HTML #CSS #JavaScript #MercadoPago #Web', 
+          'https://github.com/CodeStrong2023/JuniorTechTropersCuartoSem2024/tree/main/JavaScript/E-commerce', 
+          'https://www.youtube.com/@JuniorTechTroopers', 
+          'https://www.youtube.com/@JuniorTechTroopers',
+          '../../../assets/images/proyectos/project (1).webp'
         )">
   Show
 </button>
