Estilos de card modal overley de proyectos

--- a/juniortech/src/app/components/projects/projects.component.css
+++ b/juniortech/src/app/components/projects/projects.component.css
@@ -161,7 +161,7 @@ h2{
 
 
 .card-int__button::before {
-  content: 'More for this article'; 
+  content: 'Mostrar detalles'; 
   color: white;
   display: flex;
   align-items: center;
