--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -20,7 +20,7 @@
           'https://www.youtube.com/watch?v=-J3x-1ghTbQ&t=194s',
           '../../../assets/images/proyectos/project (2).webp'
         )">
-  Show
+  Sabes más
 </button>
       </div>
     </div>
@@ -43,7 +43,7 @@
           'https://www.youtube.com/watch?v=TMBL6uw-nCQ',
           '../../../assets/images/proyectos/project (3).webp'
         )">
-  Show
+ Sabes más
 </button>
       </div>
     </div>
@@ -66,7 +66,7 @@
           'https://www.youtube.com/watch?v=490voq0Dho8',
           '../../../assets/images/proyectos/project (4).webp'
         )">
-  Show
+  Sabes más
 </button>
       </div>
     </div>
@@ -89,7 +89,7 @@
           'https://www.youtube.com/@JuniorTechTroopers',
           '../../../assets/images/proyectos/project (5).webp'
         )">
-  Show
+  Sabes más
 </button>
       </div>
     </div>
@@ -114,7 +114,7 @@
           'https://www.youtube.com/@JuniorTechTroopers',
           '../../../assets/images/proyectos/project (1).webp'
         )">
-  Show
+  Sabes más
 </button>
       </div>
     </div>
