--- a/juniortech/src/app/components/presentation/presentation.component.html
+++ b/juniortech/src/app/components/presentation/presentation.component.html
@@ -1,8 +1,10 @@
 <section id="about-us" class="about-us-section" data-aos="zoom-in-up">
     <h2>Acerca de Nosotros</h2>
-    <p>Junior Tech Troopers, estudiantes avanzados de la carrera Tecnicatura en Programación. Nuestro objetivo es
-        desarrollar soluciones innovadoras y eficaces mientras nos preparamos para convertirnos en profesionales
-        altamente capacitados en el campo de la tecnología. Tenemos como pilares a:</p>
+    <p><span>Junior Tech Troopers</span> es un equipo de profesionales de la programación especializados en desarrollar soluciones innovadoras y efectivas en tecnología. 
+        Nuestro objetivo es aplicar nuestros conocimientos y habilidades para resolver problemas complejos y 
+        ofrecer resultados de <span>alta calidad</span> en cada proyecto. 
+        Nos basamos en pilares fundamentales como la innovación, la eficiencia y el <span>trabajo en equipo</span> para crear un impacto positivo en el ámbito tecnológico. No dudes
+    en <span><a href="/contact">contactarnos</a></span></p>
     <div class="pillars-container">
         <div class="pillar">
             <i class="bi bi-people-fill"></i>
