--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -10,18 +10,17 @@
       <div class="card-int">
         <p class="card-int__title">Trooper Stay Java</p>
         <p class="excerpt">Aplicación de escritorio construida en Java y JOptionPane</p>
-        <button class="card-int__button" 
-        (click)="openModal(
+        <button class="card-int__button" (click)="openModal(
           'Trooper Stay Java', 
-          'Aplicación de escritorio construida en Java y JOptionPane', 
+          'TrooperStays es una plataforma de reserva de alojamiento que permite a los usuarios encontrar y alquilar departamentos, habitaciones de hoteles y cabañas de manera sencilla y conveniente.', 
           '#Java #Desktop #JOptionPane #JDBC #MySQL', 
           'https://github.com/CodeStrong2023/ProyectoJuniorTechTroopers', 
           'https://trooper-stay.web.app/', 
           'https://www.youtube.com/watch?v=-J3x-1ghTbQ&t=194s',
           '../../../assets/images/proyectos/project (2).webp'
         )">
-  Sabes más
-</button>
+          Sabes más
+        </button>
       </div>
     </div>
 
@@ -33,8 +32,7 @@
       <div class="card-int">
         <p class="card-int__title">Trooper Stay Python</p>
         <p class="excerpt">Mejora del proyecto anterior construido en Python y TKinter</p>
-        <button class="card-int__button" 
-        (click)="openModal(
+        <button class="card-int__button" (click)="openModal(
           'Trooper Stay Python', 
           'Aplicación Python que permite a los usuarios publicar y buscar alojamientos para estancias temporales. Los usuarios pueden registrarse, iniciar sesión y tener roles duales: publicar alojamientos o contratar servicios de alojamiento. La aplicación utiliza diferentes bases de datos MySQL para almacenar la información de los alojamientos y los usuarios.', 
           '#Python #Tkinter #MySQL', 
@@ -43,31 +41,30 @@
           'https://www.youtube.com/watch?v=TMBL6uw-nCQ',
           '../../../assets/images/proyectos/project (3).webp'
         )">
- Sabes más
-</button>
+          Sabes más
+        </button>
       </div>
     </div>
 
     <div class="card" data-aos="zoom-in-up">
       <div class="card__img">
         <img src="../../../assets/images/proyectos/project (4).webp" alt="Descripción del proyecto" />
-        <span class="card__span">#Web</span>        
+        <span class="card__span">#Web</span>
       </div>
       <div class="card-int">
         <p class="card-int__title">Trooper Stay E-commerce</p>
         <p class="excerpt">Aplicación Web SPA full stack</p>
-        <button class="card-int__button" 
-        (click)="openModal(
+        <button class="card-int__button" (click)="openModal(
           'Trooper Stay E-commerce', 
-          'Aplicación Web SPA full stack. TrooperStay es una plataforma de reservas de alojamiento que permite a los usuarios encontrar y alquilar departamentos, habitaciones de hotel y cabañas de manera sencilla.', 
+          'Aplicación web de una sola página (SPA) y full stack que ofrece una plataforma para la reserva de alojamientos. TrooperStay permite a los usuarios buscar y alquilar diversos tipos de hospedajes, como departamentos, habitaciones de hotel y cabañas, de manera rápida y accesible. La plataforma cuenta con un sistema de filtrado por ubicación, fechas y características del alojamiento, facilitando la búsqueda de opciones según las preferencias de cada usuario. Incluye una interfaz intuitiva y funcional, con procesos de reserva simplificados, que permiten a los usuarios gestionar sus reservas y explorar ofertas de alojamiento desde cualquier dispositivo.', 
           '#Angular #HTML #CSS #BOOTSTRAP #Firebase #AOS #TypeScript #JavaScript #Java #Springboot #PostgreSQL #Web', 
           'https://github.com/CodeStrong2023/JuniorTechTroopersE-commerse-Front', 
           'https://trooper-stay.web.app/', 
           'https://www.youtube.com/watch?v=490voq0Dho8',
           '../../../assets/images/proyectos/project (4).webp'
         )">
-  Sabes más
-</button>
+          Sabes más
+        </button>
       </div>
     </div>
 
@@ -79,8 +76,7 @@
       <div class="card-int">
         <p class="card-int__title">Avatar | juego</p>
         <p class="excerpt">Juego de avatar donde el usuario elige un personaje</p>
-        <button class="card-int__button" 
-        (click)="openModal(
+        <button class="card-int__button" (click)="openModal(
           'Avatar el juego', 
           'Juego interactivo en el que el usuario elige entre varios personajes y se enfrenta a otros jugadores o a la computadora. Cada personaje tiene diferentes tipos de ataques, habilidades y niveles de vida. Los jugadores deben seleccionar sus estrategias de ataque y defensa para reducir la barra de vida del oponente hasta dejarlo sin puntos de vida, ganando así la partida. Este juego combina elementos de estrategia y acción, proporcionando una experiencia entretenida y desafiante.', 
           '#HTML #CSS #JavaScript #Web', 
@@ -89,8 +85,8 @@
           'https://www.youtube.com/@JuniorTechTroopers',
           '../../../assets/images/proyectos/project (5).webp'
         )">
-  Sabes más
-</button>
+          Sabes más
+        </button>
       </div>
     </div>
 
@@ -104,8 +100,7 @@
         <p class="excerpt">E-commerce básico donde el usuario puede sumar productos al carrito y realizar la compra
           mediante mercado pago.
         </p>
-        <button class="card-int__button" 
-        (click)="openModal(
+        <button class="card-int__button" (click)="openModal(
           'Tienda de café E-commerce básico', 
           'Plataforma de comercio electrónico dedicada a la venta de cafés especiales, donde los usuarios pueden explorar una variedad de productos, agregar sus favoritos al carrito y realizar compras mediante la integración de Mercado Pago. La tienda incluye descripciones detalladas de cada tipo de café, opciones para personalizar pedidos y una interfaz intuitiva que permite a los usuarios completar sus compras de manera rápida y segura. Este proyecto está enfocado en mejorar la experiencia de compra y el acceso a productos de alta calidad para los amantes del café.', 
           '#HTML #CSS #JavaScript #MercadoPago #Web', 
@@ -114,11 +109,11 @@
           'https://www.youtube.com/@JuniorTechTroopers',
           '../../../assets/images/proyectos/project (1).webp'
         )">
-  Sabes más
-</button>
+          Sabes más
+        </button>
       </div>
     </div>
-    
+
   </div>
   <!-- Modal -->
   <div *ngIf="isModalOpen" class="modal-overlay show" (click)="closeModal()">
@@ -137,5 +132,5 @@
       <button class="close-button" (click)="closeModal()">Close</button>
     </div>
   </div>
-  
+
 </section>
