--- a/juniortech/src/app/components/header/header.component.html
+++ b/juniortech/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
                             <a class="nav-link active" aria-current="page" href="#home">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Conocenos">Acerca de nosotros</a>
+                            <a class="nav-link" href="#about">Acerca de nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#skills">Habilidades</a>
