--- a/juniortech/src/app/components/home/home.component.html
+++ b/juniortech/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <section id="home">
 <app-header></app-header>
 </section>
-<section >
+<section id="about">
 <app-about></app-about>
 </section>
 <app-presentation></app-presentation>
