--- a/juniortech/src/app/components/carousel/carousel.component.html
+++ b/juniortech/src/app/components/carousel/carousel.component.html
@@ -7,16 +7,16 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../../assets/images/banner/banner.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="../../../assets/images/banner/banner2 jtt.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-        <h1 class="animate-text">Bienvenidos a <span class="span-1">Junior </span> <span class="span-2">Tech </span> <span class="span-3">Troopers</span></h1>
+        <h1 class="animate-text"><span class="span-1">JUNIOR </span> <span class="span-2">TECH </span> <span class="span-3">TROOPERS</span></h1>
         <a routerLink="/contact" class="btn btn-success mt-3">Contactanos</a>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/images/banner/banner.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="../../../assets/images/banner/banner2 jtt.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-        <h1 class="animate-text">¿Ya viste nuestro último video?</h1>
+        <h1 class="animate-text2">¿Ya viste nuestro último video?</h1>
         <h5 class="carousel-title">Corré a ver nuestro último video de E-commerce Trooper Stay!!</h5>
         <div class="card mt-3 animated-card">
           <iframe width="460" height="215" src="https://www.youtube.com/embed/490voq0Dho8?si=_i-3O0TKkWkxzuwA"
@@ -32,9 +32,9 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/images/banner/banner.jpg" class="d-block w-100 carousel-image" alt="...">
+      <img src="../../../assets/images/banner/banner2 jtt.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-        <h1 class="animate-text">Novedades!!</h1>
+        <h1 class="animate-text3">Novedades!!</h1>
         <h5 class="carousel-title">Nuevos proyectos añadidos y chatbot funcional</h5>
         <a (click)="chatbot()" class="btn btn-success mt-3">Probar ahora</a>
       </div>
