--- a/juniortech/src/app/components/about/about.component.html
+++ b/juniortech/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
 <section id="Conocenos" class="conocenos-section" data-aos="zoom-in-up">
-    <h1>Nuestro equipo</h1>
+    <h1>NUESTRO EQUIPO</h1>
     <div class="card-container" data-aos="zoom-in-up">
         <!-- Card 1 -->
         <div class="card-column">
