--- a/juniortech/src/app/components/about/about.component.html
+++ b/juniortech/src/app/components/about/about.component.html
@@ -117,7 +117,7 @@
                     <img src="../../../assets/images/miembros/slimify-compressed/integrante (6).webp">
                     <div class="info">
                         <div class="title">Mauro Barroso</div>
-                        <p>Programadora | Experto en fulbito</p>
+                        <p>Programador | Experto en fulbito</p>
                     </div>
                     <ul>
                         <a href="https://github.com/Maujj1999" target="_blank"><i class="bi bi-github"></i></a>
