--- a/juniortech/src/app/components/header/header.component.css
+++ b/juniortech/src/app/components/header/header.component.css
@@ -3,7 +3,7 @@ header {
     max-width: 100%;
     height: auto;
     border-radius: 20px;
-    background-color: rgba(95, 95, 99, 0.521);
+    background-color: rgba(95, 95, 99, 0.404);
     margin: auto;
     padding: 28px;
     border: 5px solid rgba(7, 59, 68, 0.651);
@@ -11,7 +11,8 @@ header {
   }
   
 .navbar-custom{
-  background-color: var(--color-card);
+  background-color:#00000069;
+  
   font-weight: medium;
 }
 
