--- a/juniortech/src/app/components/presentation/presentation.component.html
+++ b/juniortech/src/app/components/presentation/presentation.component.html
@@ -1,5 +1,5 @@
 <section id="about-us" class="about-us-section" data-aos="zoom-in-up">
-    <h2>Acerca de Nosotros</h2>
+    <h2>SOBRE NOSOTROS</h2>
     <p><span>Junior Tech Troopers</span> es un equipo de profesionales de la programación especializados en desarrollar soluciones innovadoras y efectivas en tecnología. 
         Nuestro objetivo es aplicar nuestros conocimientos y habilidades para resolver problemas complejos y 
         ofrecer resultados de <span>alta calidad</span> en cada proyecto. 
