--- a/juniortech/src/app/components/projects/projects.component.css
+++ b/juniortech/src/app/components/projects/projects.component.css
@@ -23,13 +23,15 @@ h2{
 .card {
   width: 275px;
   position: relative;
-  background: var( --color-primary);
+  background: #00000023;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 8px 15px rgba(255, 255, 255, 0.062);
   padding: 20px;
   transition: transform 0.3s ease, color 0.3s ease, background-color 0.3s ease; 
 }
 
 .skill-card {
-  background-color: rgba(0, 0, 0, 0.2); /* Negro transparente */
+  background-color: rgba(0, 0, 0, 0.11); /* Negro transparente */
   border-radius: 10px;
   padding: 10px;
   text-align: center;
