--- a/juniortech/src/app/components/contactform/contactform.component.css
+++ b/juniortech/src/app/components/contactform/contactform.component.css
@@ -10,17 +10,17 @@
 /* Contact Card */
 .contact-card {
   background-color: #fdfdfd07;
-  backdrop-filter: blur(0.05rem);
+  backdrop-filter: blur(5px);
+  box-shadow: 0 8px 15px var(--color-highlight);
   padding: 2rem;
   border-radius: 10px;
   width: 100%;
   max-width: 500px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
 
 .contact-card h2 {
-  color: #b0c929;
+  color: var(--color-highlight);
   margin-bottom: 1rem;
 }
 
@@ -47,7 +47,8 @@
 button {
   width: 100%;
   padding: 1rem;
-  background-color: #b0c929;
+  color: black;
+  background-color: var(--color-highlight);
   border: none;
   border-radius: 5px;
   font-size: 1rem;
@@ -57,7 +58,9 @@ button {
 }
 
 button:hover {
-  background-color: #97a81b;
+  background-color: transparent !important;
+  color:var(--color-highlight);
+  box-shadow: 0 4px 12px var(--color-highlight);
 }
 
 /* Alert for Success Message */
